feat: Adicionar RecyclerView à EmpresaActivity e Configurar Toolbar
- Atualizado activity_empresa.xml para incluir RecyclerView com ID recyclerProdutos
- Criado ProdutoAdapter.java para gerenciar itens no RecyclerView
- Criado layout item_produto.xml para itens do RecyclerView
- Configurado RecyclerView na EmpresaActivity.java para exibir lista de produtos
- Atualizada configuração da toolbar na EmpresaActivity.java

Alterações feitas em:
- activity_configuracoes_empresa.xml: ajustes menores de layout
- activity_empresa.xml: adicionado RecyclerView para exibição de produtos
- activity_novo_produto_empresa.xml: ajustes menores de layout
- AndroidManifest.xml: adicionadas atividades e permissões necessárias
- AutenticacaoActivity.java: ajustado fluxo de autenticação
- build.gradle (Módulo: app): atualizadas dependências e configurações
- build.gradle (Projeto): atualizadas configurações a nível de projeto
- ConfiguracoesEmpresaActivity.java: integrada nova toolbar e layout
- EmpresaActivity.java: configurado RecyclerView e toolbar
- gradle.properties: atualizadas propriedades do projeto
- ic_adicionar_24.xml: adicionado novo ícone para adicionar produtos
- MainActivity.java: ajustes menores
- menu_empresa.xml: adicionados itens de menu para toolbar
- NovoProdutoEmpresaActivity.java: integrada nova toolbar e layout
- settings.gradle: atualizadas configurações do projeto
- styles.xml: atualizados estilos para nova toolbar e layouts
- toolbar.xml: criado layout da toolbar
- UsuarioFirebase.java: ajustados métodos de autenticação Firebase

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,18 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
+ext {
+    materialsearchviewVersion = '1.4.0'
+}
+
 android {
     namespace 'medlife.com.br'
-    compileSdk 32
+    compileSdk 34
 
     defaultConfig {
         applicationId "medlife.com.br"
         minSdk 21
-        targetSdk 32
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -27,12 +31,18 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    dependenciesInfo {
+        includeInApk true
+        includeInBundle true
+    }
+    buildToolsVersion '35.0.0'
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.activity:activity:1.9.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -42,8 +52,19 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.google.firebase:firebase-database'
-}
 
+
+    /*MaterialSearchView*/
+    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
+
+}
+configurations.all {
+    resolutionStrategy {
+        force 'org.jetbrains.kotlin:kotlin-stdlib:1.8.22'
+        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.22'
+        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22'
+    }
+}
 tasks.whenTaskAdded { task ->
     if (task.name == 'mapDebugSourceSetPaths') {
         task.dependsOn 'processDebugGoogleServices'
