--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,16 @@
         android:theme="@style/Theme.Medlife"
         tools:targetApi="31">
         <activity
-            android:name=".activity.EmpresaActivity"
+            android:name=".activity.NovoProdutoEmpresaActivity"
             android:exported="false" />
+        <activity
+            android:name=".activity.ConfiguracoesEmpresaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.EmpresaActivity"
+            android:exported="false"
+        android:theme="@style/Theme.AppCompat.NoActionBar"/>
+
         <activity
             android:name=".activity.HomeActivity"
             android:exported="false">
