--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Medlife"
         tools:targetApi="31">
         <activity
+            android:name=".activity.RegisterActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.NovoProdutoEmpresaActivity"
             android:exported="false" />
         <activity
@@ -23,8 +26,7 @@
         <activity
             android:name=".activity.EmpresaActivity"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.NoActionBar"/>
-
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".activity.HomeActivity"
             android:exported="false"
@@ -43,8 +45,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activity.AutenticacaoActivity" />
-     
+        <activity android:name=".activity.AutenticacaoActivity" />
     </application>
+
 </manifest>
