feat: Atualiza Gradle e refatora menu da EmpresaActivity
- Atualizada a versão do Gradle wrapper de 7.5 para 8.5.
- Atualizadas as versões dos plugins Android application e library para 8.3.0.
- Removida a linha `buildToolsVersion '35.0.0'` do `app/build.gradle`.
- Substituído `configurations.all` por `configurations.configureEach` e `tasks.whenTaskAdded` por `tasks.configureEach` no `app/build.gradle`.
- Refatorada a criação e manipulação do menu na `EmpresaActivity.java` utilizando `MenuProvider` em vez de sobrescrever `onCreateOptionsMenu` e `onOptionsItemSelected`.
- Adicionado `finish()` ao método `deslogarUsuario()` na `EmpresaActivity.java`.
- Removida a dependência `com.miguelcatalan:materialsearchview:1.4.0`.

Alterações feitas em:
- `gradle/wrapper/gradle-wrapper.properties`: atualizada URL de distribuição do Gradle.
- `build.gradle`: atualizadas versões dos plugins.
- `app/build.gradle`: removido `buildToolsVersion`, atualizados blocos de configuração e removida dependência.
- `app/src/main/java/medlife/com/br/activity/EmpresaActivity.java`: refatoração do menu e ajuste no logout.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,6 @@ android {
         includeInApk true
         includeInBundle true
     }
-    buildToolsVersion '35.0.0'
 }
 
 dependencies {
@@ -53,19 +52,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.google.firebase:firebase-database'
 
-
-    /*MaterialSearchView*/
-    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
-
 }
-configurations.all {
+configurations.configureEach {
     resolutionStrategy {
         force 'org.jetbrains.kotlin:kotlin-stdlib:1.8.22'
         force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.22'
         force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22'
     }
 }
-tasks.whenTaskAdded { task ->
+tasks.configureEach { task ->
     if (task.name == 'mapDebugSourceSetPaths') {
         task.dependsOn 'processDebugGoogleServices'
     }
