Atualização das versões do Gradle e SDKs, e adição de dependências de credenciais
- Atualizado Gradle Wrapper de 8.5-all para 8.6-bin.
- Atualizadas as versões dos plugins Android Application e Library de 8.3.0 para 8.4.0 no `build.gradle` do projeto.
- Atualizado `compileSdk` de 34 para 35 no `app/build.gradle`.
- Atualizado `targetSdk` de 34 para 35 no `app/build.gradle`.
- Adicionadas novas dependências no `app/build.gradle`:
    - `androidx.credentials:credentials:1.5.0`
    - `androidx.credentials:credentials-play-services-auth:1.5.0`
    - `com.google.android.libraries.identity.googleid:googleid:1.1.1`

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ ext {
 
 android {
     namespace 'medlife.com.br'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "medlife.com.br"
         minSdk 21
-        targetSdk 34
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
@@ -42,6 +42,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.activity:activity:1.9.1'
+    implementation 'androidx.credentials:credentials:1.5.0'
+    implementation 'androidx.credentials:credentials-play-services-auth:1.5.0'
+    implementation 'com.google.android.libraries.identity.googleid:googleid:1.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
