--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.google.firebase:firebase-database'
 
+    /*Google Sign In*/
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
 }
 configurations.configureEach {
     resolutionStrategy {
