--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,27 +25,25 @@
             android:exported="false" />
         <activity
             android:name=".activity.EmpresaActivity"
-            android:exported="false"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+            android:exported="false" />
         <activity
             android:name=".activity.HomeActivity"
-            android:exported="false"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".activity.MainActivity"
-            android:exported="true"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.AutenticacaoActivity" />
+        <activity 
+            android:name=".activity.AutenticacaoActivity"
+            android:theme="@style/Theme.Medlife.NoActionBar" />
     </application>
 
 </manifest>
