feat: Implementar tela de detalhes do produto
- Adicionada `ProductDetailActivity` para exibir informações detalhadas de um produto.
- Criado layout `activity_product_detail.xml` com design para visualização de detalhes do produto, incluindo imagem, nome, descrição, preço, quantidade, informações do vendedor e seção de review.
- `ProductAdapter` atualizado para abrir `ProductDetailActivity` ao clicar em um item da lista, passando o objeto `Product` selecionado.
- Modelo `Product` agora implementa `Parcelable` para permitir a passagem de objetos entre Activities.
- Adicionados novos ícones vetoriais: `ic_add_blue.xml`, `ic_arrow_down.xml`, `ic_arrow_left.xml`, `ic_minus.xml`.
- Atualizado ícone `ic_arrow_right.xml`.
- Adicionado drawable `bg_product_detail_top.xml` para o background da seção superior da tela de detalhes.
- Adicionado estilo `ReviewStar` em `styles.xml` para as estrelas de avaliação.
- Registrada `ProductDetailActivity` no `AndroidManifest.xml`.
- Corrigida referência de `imageResId` para `image` no `ProductAdapter` e `Product`.

Alterações feitas em:
- `app/src/main/java/medlife/com/br/adapter/ProductAdapter.java`
- `app/src/main/res/drawable/ic_add_blue.xml` (novo)
- `app/src/main/res/drawable/ic_arrow_down.xml` (novo)
- `app/src/main/res/drawable/bg_product_detail_top.xml` (novo)
- `app/src/main/AndroidManifest.xml`
- `app/src/main/res/values/styles.xml`
- `app/src/main/java/medlife/com/br/model/Product.java`
- `app/src/main/java/medlife/com/br/activity/ProductDetailActivity.java` (novo)
- `app/src/main/res/drawable/ic_arrow_left.xml` (novo)
- `app/src/main/res/drawable/ic_minus.xml` (novo)
- `app/src/main/res/drawable/ic_arrow_right.xml`
- `app/src/main/res/layout/activity_product_detail.xml` (novo)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
         <activity 
             android:name=".activity.AutenticacaoActivity"
             android:theme="@style/Theme.Medlife.NoActionBar" />
+        <activity
+            android:name=".activity.ProductDetailActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
