feat: Implementar tela de sucesso do pedido e funcionalidade de checkout
- Adicionada `OrderSuccessActivity.java` para exibir uma tela de confirmação após a finalização do pedido.
    - Inclui botões para "Acompanhar pedido" (TODO) e "Voltar para o inicio".
    - Impede o retorno para o carrinho ao pressionar o botão "Voltar".
- Criado layout `activity_order_success.xml` para a tela de sucesso do pedido.
    - Contém uma imagem de sucesso, textos informativos e botões de ação.
- Adicionado ícone `ic_order_success.xml`.
- Modificado `CartFragment.java`:
    - Adicionado botão "Checkout" (`buttonCheckout`).
    - Ao clicar em "Checkout":
        - O carrinho é limpo através do `CartManager.getInstance().clearCart()`.
        - O usuário é redirecionado para `OrderSuccessActivity`.
- Modificado `CartManager.java`:
    - Adicionado método `clearCart()` para remover todos os itens do carrinho.
- Atualizado `AndroidManifest.xml` para declarar a nova `OrderSuccessActivity`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
         <activity
             android:name=".activity.ProductDetailActivity"
             android:exported="false" />
+        <activity
+            android:name=".activity.OrderSuccessActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
