--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 
     /*Google Sign In*/
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
+    
+    /*Google Play Services Location*/
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
 configurations.configureEach {
     resolutionStrategy {
