--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'androidx.credentials:credentials-play-services-auth:1.5.0'
     implementation 'com.google.android.libraries.identity.googleid:googleid:1.1.1'
     implementation 'com.google.firebase:firebase-firestore:25.1.4'
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:3.0.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -61,6 +62,18 @@ dependencies {
     
     /*Google Play Services Location*/
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    
+    /*CameraX for QR Code Scanning*/
+    implementation 'androidx.camera:camera-core:1.3.1'
+    implementation 'androidx.camera:camera-camera2:1.3.1'
+    implementation 'androidx.camera:camera-lifecycle:1.3.1'
+    implementation 'androidx.camera:camera-view:1.3.1'
+    
+    /*ML Kit for Barcode Scanning*/
+    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
+    
+    /*Guava for ListenableFuture*/
+    implementation 'com.google.guava:guava:31.1-android'
 }
 configurations.configureEach {
     resolutionStrategy {
