feat: Adicionar testes unitários e de integração
- Adicionados testes unitários para as classes:
    - `CartItemTest`: Testa getters e setters de `product` e `quantity`.
    - `CartManagerTest`: Testa adição, remoção, atualização de quantidade e limpeza do carrinho.
    - `CategoryTest`: Testa setter e getter de `name`.
    - `FarmaciaTest`: Testa getters e setters de `id`, `name` e `location`.
    - `OrderManagerTest`: Testa o cenário onde `UsuarioFirebase.getIdUsuario()` retorna `null`.
    - `OrderStatusTest`: Testa os valores do enum `OrderStatus`.
    - `OrderTest`: Testa getters e setters para vários campos da classe `Order`.
    - `ProductTest`: Testa getters de `name` e `farmacia`.
    - `UsuarioFirebaseTest`: Testa os métodos `getIdUsuario` e `getUsuarioAtual` com mocks.
    - `UsuarioTest`: Testa getters e setters para vários campos da classe `Usuario`.
- Adicionado teste de integração `LoginAndBuyIntegrationTest` para simular o fluxo de login e compra de produto (placeholder para a parte de compra).
- Adicionadas dependências do Mockito para testes no `app/build.gradle`.
- Adicionado `setName` na classe `Category`.
- Adicionado ID `autentication` ao `ConstraintLayout` em `activity_autenticacao.xml`.
- Criado arquivo `.idea/androidTestResultsUserPreferences.xml` para preferências de resultados de testes Android.
- Atualizado `.idea/deploymentTargetSelector.xml` para incluir configuração de execução para `LoginAndBuyIntegrationTest`.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,13 @@ dependencies {
     
     /*Guava for ListenableFuture*/
     implementation 'com.google.guava:guava:31.1-android'
+
+    // For unit tests
+    testImplementation 'org.mockito:mockito-core:5.2.0'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
+
+    // For Android instrumented tests (if needed)
+    androidTestImplementation 'org.mockito:mockito-android:5.2.0'
 }
 configurations.configureEach {
     resolutionStrategy {
